# LiRAYS-Scada

./: .env.example  .flake8  .gitignore  Architecture.md  Cargo.toml  Dockerfile  Makefile  README.md  buf.yaml  build.rs  build.sh  codecov.yml  demodata.db  main.py  pyproject.toml  settings-default.yaml  settings-dev.yaml
.github/workflows/: backend-tests.yml  debian-build.yml  frontend-tests.yml  publish-and-release.yml
backend/: pyproject.toml
backend/rust/proto/namespace/: commands.proto  types.proto
backend/rust/src/rtdata/: events.rs  server.rs  utils.rs
backend/src/scada/: config.py
backend/src/scada/http_api/: api.py
backend/src/scada/http_api/database/: sqlite_engine.py
backend/src/scada/http_api/model/: del_cmd.py  set_cmd.py
backend/src/scada/http_api/routes/: data.py
backend/src/scada/proto/namespace/: commands_pb2.pyi  enums_pb2.py
clients/rust-client/: Cargo.toml  README.md  build.rs
clients/rust-client/demo/: README.md
clients/rust-client/demo/src/: basic.rs  bulk_test.rs  data_stress.rs  extress_test.rs  main.rs  subscribe.rs  tree_stress.rs
clients/rust-client/src/: lib.rs
clients/rust-client/src/types/: errors.rs
cmd_and_response_examples/: add.json  add_response.json  del.json  del_response.json  get.json  get_response.json  list_folder.json  list_response.json  list_root.json  set.json  set_response.json
data_dir/: static.db
data_dir/rt_data/: data.mdb  lock.mdb
deb-files/etc/systemd/system/: lirays-scada.service
debian/: control  files  prerm
debian/.debhelper/lirays-scada/: dbgsym-build-ids
debian/lirays-scada/DEBIAN/: conffiles  control  md5sums  postinst  postrm  preinst  prerm
demo_data2/: data.mdb  lock.mdb
doc/: api.md  architecture.md  configuration.md  development.md
doc/shadcn-svelte/: refactor-audit.md
doc/shadcn-svelte/components/: breadcrumb.md  button.md  calendar.md  combobox.md  command.md  data-table.md  date-picker.md  field.md  form.md  item.md  native-select.md  navigation-menu.md  sidebar.md  sonner.md  table.md
doc/shadcn-svelte/custom-components/: README.md  tags-input.md
frontend/: .env.example  .prettierignore  AGENTS.md  ARCHITECTURE.md  README.md  chatgpt-implementation-compatible.md  chatgpt-implementation.md  components.json  eslint.config.js  jsrepo.json  package-lock.json  package.json  sketch.pen  svelte.config.js  test_ws.ts  vite.config.ts
frontend/__mocks__/: ns.json  ns.yml  ns2.yml
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/core/theme/: index.html  theme-utils.ts.html
frontend/coverage/core/ws/: command-ws-client.ts.html  index.html  tag-stream-client.ts.html  types.ts.html
frontend/coverage/features/graph/: connectors.ts.html  index.html  live-utils.ts.html  widget-handlers.ts.html  widget-type-compat.ts.html
frontend/coverage/features/namespace-builder/: index.html  monaco-yaml-config.ts.html  namespace-yaml.ts.html
frontend/coverage/features/realtime/: index.html  page-tag-realtime-provider.ts.html
frontend/coverage/features/tree/: flatten.ts.html  index.html  server-adapter.ts.html  tree-remote-reconcile.ts.html  tree-selection-summary.ts.html  tree-selection.ts.html  tree-store.ts.html
frontend/coverage/features/views/: index.html  types.ts.html
frontend/coverage/features/workspace/: index.html  layout-graph-history.ts.html  layout-graph-metadata.ts.html  layout-graph-order.ts.html
frontend/coverage/forms/: index.html  sanitize.ts.html  tree-schemas.ts.html
frontend/coverage/proto/namespace/: commands.ts.html  enums.ts.html  events.ts.html  index.html  types.ts.html
frontend/coverage/stores/: index.html  snackbar.ts.html
frontend/doc/shadcn-svelte/blocks/: REFERENCE.md
frontend/doc/shadcn-svelte/components/: badge.md  card.md  chart.md  empty.md  range-calendar.md  typography.md
frontend/doc/shadcn-svelte/custom-components/: number-field.md
frontend/src/: app.html  monaco-editor-internals.ts
frontend/src/lib/__mocks__/: ns.yml
frontend/src/lib/auth/: session.ts
frontend/src/lib/components/: login-form.svelte  setup-form.svelte
frontend/src/lib/forms/: sanitize.ts  (+2 more)
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
packaging/debian/debian/: changelog  debhelper-build-stamp  install  lirays-scada.substvars  postinst  postrm  preinst  prerm  rules
packaging/macos/: build_dmg.sh  com.lirays.scada.plist  postinstall
packaging/macos/gui/: Cargo.toml
packaging/macos/gui/src/: main.rs
packaging/macos/launchd/: com.lirays.scada.plist  com.lirays.scada.root.plist
packaging/macos/resources/: Info.plist  README.md  settings.yaml
packaging/macos/scripts/: postinstall  postupgrade  preinstall  uninstall.sh
packaging/rpm/SOURCES/: settings.yaml
packaging/rpm/SPECS/: lirays-scada.spec
packaging/windows/: README.md  install.ps1  setup.nsi  uninstall.ps1
proto/namespace/: commands.proto  events.proto  types.proto
rust/: Cargo.toml  build.rs
rust/proto/namespace/: commands.proto  enums.proto  events.proto  types.proto
rust/src/: lib.rs
rust/src/rtdata/: events.rs  mod.rs  namespace.rs  parser.rs  proto.rs  server.rs  utils.rs  variable.rs
scripts/: generate-release-notes.sh  generate_proto.sh
src/: lib.rs  main.rs  migration.rs  settings.rs
src/app/: mod.rs
src/http/: mod.rs  response.rs  state.rs
src/http/resources/: mod.rs
src/liraysctl/: args.rs  config.rs  db.rs  metrics.rs  mod.rs  prompt.rs  service.rs  settings.rs  tokens.rs  users.rs
src/mac/: mod.rs
src/rtdata/: events.rs  metrics.rs  mod.rs  parser.rs  utils.rs  variable.rs
src/rtdata/http/: mod.rs  static_resource.rs
src/rtdata/server/: mod.rs  parser.rs  utils.rs  variable.rs
src/scada/: data_dir.py  lmdb_cli.py  rustmod.pyi
src/scada/http_api/: api.py
src/settings/: mod.rs  settings.rs
src/tls/: mod.rs
src_py/scada/: config.py  main.py  rustmod.pyi
(+262 files in other folders)
