[build-system]
requires = ["setuptools", "wheel", "Cython", "maturin>=1.4"]
build-backend = "maturin"

[project]
name = "scada"
version = "0.0.1"
description = "Lirays Scada System"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "lmdb",
    "aiosqlite",
    "sqlmodel",
    "fastapi",
    "uvicorn",
    "greenlet",
    "protobuf",
    "websockets",
]

[project.scripts]
lirays-backend = "scada.main:main"

[tool.maturin]
python-source = "src"
cargo-manifest-path = "rust/Cargo.toml"
module-name = "scada.rustmod"
bindings = "pyo3"
