[package]
name = "rustmod"
version = "0.1.0"
edition = "2024"

[lib]
name = "rustmod"
crate-type = ["cdylib"]

[dependencies]
bytes = "1.11.1"
futures-util = "0.3.32"
heed = { version = "0.22.0", features = ["serde"] }
log = "0.4.29"
pyo3 = { version = "0.27.0", features = ["extension-module"] }
pyo3-log = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.50.0", features = ["full"]}
tokio-tungstenite = "0.28.0"
uuid = { version = "1.21.0", features = ["v4"]}
winnow = "0.7.15"
