[package]
name = "lirays-scada-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
wry = { version = "0.37", default-features = false, features = ["os-webview", "devtools"] }
tao = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"

[package.metadata.bundle]
identifier = "com.lirays.scada.gui"
